@@ -1,7 +1,7 @@
 /****************************************************************************
  * configs/mikroe-stm32f4/scripts/gnu-elf.ld
  *
- *   Copyright (C) 2012 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2012-2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
