@@ -2,7 +2,7 @@
  * configs/mikroe_stm32f4/src/up_pwm.c
  * arch/arm/src/board/up_pwm.c
  *
- *   Copyright (C) 2011 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2011, 2013 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
