@@ -4650,3 +4650,5 @@
 	  tools (20130-4-30).
 	* configs/sim/mtdpart:  A new configuration to test MTD
 	  partitions (2013-4-30).
+	* configs/sim/mkroe-stm32f4:  Support for the MikroElektronika
+	  Mikromedia for STM32F4 development board (from Ken Petit, 2013-4-30).
